--- a/intro-to-python/intro-to-python-exercises-answer-key.ipynb
+++ b/intro-to-python/intro-to-python-exercises-answer-key.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this workbook, you will see text prompts containing the exercise prommpts - you will write the code that will supply the answer within code blocks and run these blocks."
+    "In this workbook, you will see text prompts containing the exercise prompts - you will write the code that will supply the answer within code blocks and run these blocks."
    ]
   },
   {
