--- a/intro-to-python/intro-to-python-exercises.ipynb
+++ b/intro-to-python/intro-to-python-exercises.ipynb
@@ -18,12 +18,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. Alter and run the block of code below. Currently, the script will print a string that says 'goodbye moon'. Alter this so the string prints, 'hello world!')"
+    "## Part 1: Variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. Alter and run the block of code below. Currently, the script will print a string that says `goodbye moon`. Alter this so the string prints, `hello world!`)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +42,132 @@
     }
    ],
    "source": [
-    "print('goodbye moon')"
+    "print(\"goodbye moon\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Create a variable with any name you would like to use, and store within that variable the string `do not fear error messages`. Display the result of this variable. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. Create a variable called equation, and store `1 + 2  * 3`, and display the result of this equation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4. Complete line 4, so this script will producing the print statement `first is: 2 and second is: 10`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first = 1\n",
+    "second = 5 * first\n",
+    "first = 2\n",
+    "second = \n",
+    "print('first is:', first, 'and second is:', second)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2: Data Types"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### In this section, you will be using the variables created in the code below. Run the block containing these variables to create them, but do not alter these."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samples = 2\n",
+    "type_test = \"4\"\n",
+    "database = \"The Basic Local Alignment Search Tool (BLAST)\"\n",
+    "organization = \"NCBI\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. Check the data types of each of the varibles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6. Print the length of `database`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 7. Convert and print `type_test` to an integer value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 8. Using slicing, print only the acronym `BLAST` from the database variable."
    ]
   },
   {
