--- a/intro-to-python/intro-to-python-exercises-answer-key.ipynb
+++ b/intro-to-python/intro-to-python-exercises-answer-key.ipynb
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### In this section, you will be using the variables created in the code below. Run the block containing these variables to create them, but do not alter these."
+    "#### In this section, you will be using the variables created in the code below. Run the block containing these variables to create them, but do not alter the contents of this block."
    ]
   },
   {
@@ -190,6 +190,265 @@
    "outputs": [],
    "source": [
     "print(database[39:44])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 3: Functions and Lists "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. Create and return (print) a list called `x`, storing the following numbers: 23, 34, 54, 65, 45, 23, 34, 55."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[23, 34, 54, 65, 45, 23, 34, 55]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [23, 34, 54, 65, 45, 23, 34, 55]\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Python provides basic statistics functions including mean(), median(), and mode(). These functions are a part of the `statistics` package. Import the `statistics` package below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import statistics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. Use the `help()` function to learn about the `mean()` function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function mean in module statistics:\n",
+      "\n",
+      "mean(data)\n",
+      "    Return the sample arithmetic mean of data.\n",
+      "    \n",
+      "    >>> mean([1, 2, 3, 4, 4])\n",
+      "    2.8\n",
+      "    \n",
+      "    >>> from fractions import Fraction as F\n",
+      "    >>> mean([F(3, 7), F(1, 21), F(5, 3), F(1, 3)])\n",
+      "    Fraction(13, 21)\n",
+      "    \n",
+      "    >>> from decimal import Decimal as D\n",
+      "    >>> mean([D(\"0.5\"), D(\"0.75\"), D(\"0.625\"), D(\"0.375\")])\n",
+      "    Decimal('0.5625')\n",
+      "    \n",
+      "    If ``data`` is empty, StatisticsError will be raised.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(statistics.mean)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4. Use `mean()` to find the average of `x`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "41.625\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(statistics.mean(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. Use `append()` to add the number 100 to x as a new list item, and print x. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[23, 34, 54, 65, 45, 23, 34, 55, 100, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x.append(100)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6. Create a new list containing the numbers 200, 300, and 400. Use the `extend()` method to combine this new list with  `x`. Print the result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[23, 34, 54, 65, 45, 23, 34, 55, 100, 100, 200, 300, 400]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = [200, 300, 400]\n",
+    "x.extend(y)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 4: For Loops"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. Use a for loop to return each of the numbers stored in x, preceeded by the string \"result: \". \n",
+    "#### The output should look like `result: returned_number_from_x`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result:  23\n",
+      "result:  34\n",
+      "result:  54\n",
+      "result:  65\n",
+      "result:  45\n",
+      "result:  23\n",
+      "result:  34\n",
+      "result:  55\n",
+      "result:  100\n",
+      "result:  100\n",
+      "result:  200\n",
+      "result:  300\n",
+      "result:  400\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in x:\n",
+    "    print(\"result: \", i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. For each number in list `x`, print: \n",
+    "    * The result of each number plus 21. \n",
+    "    * Each number multiplied by itself.\n",
+    "    * The result the average of x minus each number. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44 529 87.23076923076923\n",
+      "55 1156 76.23076923076923\n",
+      "75 2916 56.230769230769226\n",
+      "86 4225 45.230769230769226\n",
+      "66 2025 65.23076923076923\n",
+      "44 529 87.23076923076923\n",
+      "55 1156 76.23076923076923\n",
+      "76 3025 55.230769230769226\n",
+      "121 10000 10.230769230769226\n",
+      "121 10000 10.230769230769226\n",
+      "221 40000 -89.76923076923077\n",
+      "321 90000 -189.76923076923077\n",
+      "421 160000 -289.7692307692308\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in x:\n",
+    "    first_eq = i + 21\n",
+    "    second_eq = i * i \n",
+    "    third_eq = statistics.mean(x) - i\n",
+    "    print(first_eq, second_eq, third_eq)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 5: "
    ]
   }
  ],
