--- a/intro-to-python/intro-to-python-workbook.ipynb
+++ b/intro-to-python/intro-to-python-workbook.ipynb
@@ -442,18 +442,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Built-in Functions and Finding Help in Python\n",
+    "# Functions and Finding Help in Python\n",
     "* Different functions may take 0 or 1, or many arguments.\n",
     "* Functions are likely to be specific about the data type they need.\n",
     "* Functions may have default values for some arguments.\n",
-    "* You can learn about functions using a `help` function."
+    "* You can learn about functions using a `help` function.\n",
+    "* Python has built-in functions, as well as many other functions that are associated with external packages. \n",
+    "* You can create your own functions in Python. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Functions might be able to take multiple items"
+    "##### Functions might be able to take multiple items"
    ]
   },
   {
@@ -479,12 +481,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Functions might have default settings"
+    "##### Functions might have default settings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -505,12 +507,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Finding more information about a function"
+    "##### Finding more information about a function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -530,6 +532,38 @@
    ],
    "source": [
     "help(round)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Access more functions by importing external libraries into a project\n",
+    "\n",
+    "We will discuss libraries further in a later section, but this is how you add or import a library (i.e., package) into a python project. \n",
+    "* Libraries are installed once per your machine, but they need to be imported into each project you would like to use them in. \n",
+    "* In order to use functions from a specific package, you need to indicate which package the function is coming from using the syntax: library_name.function_name()\n",
+    "    * E.g., statistics.mode()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import statistics\n",
+    "n = [1, 1, 2, 3, 3, 3, 3]\n",
+    "s = statistics.mode(n)\n",
+    "print(s)"
    ]
   },
   {
@@ -569,7 +603,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Use an index to return a specific element from a list"
+    "##### Use an index to return a specific element from a list\n",
+    "\n"
    ]
   },
   {
@@ -626,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -678,17 +713,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### <font color = green> Break here for 10 minutes to complete the exercises in Part 3: Functions and Lists.</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# For Loops\n",
-    "* A for loop executes commands once for each value in a collection\n",
-    "* In other words, a foor loop tells Python to execute some statement for each element in a set. Such as,\n",
-    "    * Each character in a string\n",
-    "    * Each item in a list\n",
-    "    * Every cell in a column of tabular data"
+    "* For loops allow you to drill down into a data structure.\n",
+    "    * Operate on sentence in a paragraph, each word in a sentence, or each character in a word.\n",
+    "    * Operate on each table in a database, each column in a spreadsheet, or each cell in a column. \n",
+    "    * Operate on each item in a list.\n",
+    "* A for loop executes commands once for each element in a set."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -724,18 +766,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elo\n",
-      "Molly\n",
-      "Charlie\n",
-      "Riley\n",
-      "Ben\n",
-      "Charolette\n"
+      "First name: Elo\n",
+      "First name: Molly\n",
+      "First name: Charlie\n",
+      "First name: Riley\n",
+      "First name: Ben\n",
+      "First name: Charolette\n"
      ]
     }
    ],
    "source": [
     "for name in names_1:\n",
-    "    print(name)"
+    "    print('First name:', name)"
    ]
   },
   {
@@ -747,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -766,6 +808,13 @@
     "    first_equation = p + 100\n",
     "    second_equation = p * -1\n",
     "    print(p, first_equation, second_equation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <font color = green> Break here for 10 minutes to complete the exercises in Part 4: For Loops.</font>"
    ]
   },
   {
