dataframes content added

--- a/intro-to-python/intro-to-python-exercises-answer-key.ipynb
+++ b/intro-to-python/intro-to-python-exercises-answer-key.ipynb
@@ -448,8 +448,181 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 5: "
+    "## Part 5: Pandas and Data Frames"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. Import the Pandas library as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " #### 2. Read in the gapminder dataset (the same one used in the class workbook) as a variable called `data`. Be sure to set the index column to `country`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(\"data/newly_hiv_infected_number_all_ages.csv\", index_col = \"country\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. Print the reported HIV rate for Tanzania in 1997"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "150000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.loc[\"Tanzania\",\"1997\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4. Print all reported years of HIV rates from Brazil, and all repored HIV rates from the year 2001 in seperate print statements. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1990        NaN\n",
+      "1991        NaN\n",
+      "1992        NaN\n",
+      "1993        NaN\n",
+      "1994        NaN\n",
+      "1995        NaN\n",
+      "1996        NaN\n",
+      "1997        NaN\n",
+      "1998        NaN\n",
+      "1999        NaN\n",
+      "2000        NaN\n",
+      "2001        NaN\n",
+      "2002        NaN\n",
+      "2003        NaN\n",
+      "2004        NaN\n",
+      "2005        NaN\n",
+      "2006        NaN\n",
+      "2007        NaN\n",
+      "2008        NaN\n",
+      "2009        NaN\n",
+      "2010        NaN\n",
+      "2011    18000.0\n",
+      "Name: Brazil, dtype: float64\n",
+      "country\n",
+      "Afghanistan                      NaN\n",
+      "Angola                       20000.0\n",
+      "Argentina                     7300.0\n",
+      "Armenia                        120.0\n",
+      "Australia                        NaN\n",
+      "Austria                          NaN\n",
+      "Azerbaijan                       NaN\n",
+      "Bahamas                        750.0\n",
+      "Bangladesh                     350.0\n",
+      "Barbados                       160.0\n",
+      "Belarus                       2100.0\n",
+      "Belgium                          NaN\n",
+      "Belize                         350.0\n",
+      "Benin                         5300.0\n",
+      "Bhutan                           NaN\n",
+      "Bolivia                          NaN\n",
+      "Botswana                     26000.0\n",
+      "Brazil                           NaN\n",
+      "Bulgaria                         NaN\n",
+      "Burkina Faso                 13000.0\n",
+      "Burundi                       6900.0\n",
+      "Cambodia                      6200.0\n",
+      "Cameroon                     57000.0\n",
+      "Canada                           NaN\n",
+      "Central African Republic     14000.0\n",
+      "Chile                            NaN\n",
+      "Colombia                         NaN\n",
+      "Congo, Rep.                   7500.0\n",
+      "Costa Rica                       NaN\n",
+      "Cote d'Ivoire                46000.0\n",
+      "                              ...   \n",
+      "Slovak Republic                  NaN\n",
+      "Slovenia                         NaN\n",
+      "Somalia                          NaN\n",
+      "South Africa                610000.0\n",
+      "South Korea                      NaN\n",
+      "South Sudan                      NaN\n",
+      "Spain                            NaN\n",
+      "Sri Lanka                      350.0\n",
+      "Sudan                            NaN\n",
+      "Suriname                       350.0\n",
+      "Swaziland                    19000.0\n",
+      "Sweden                           NaN\n",
+      "Switzerland                      NaN\n",
+      "Tajikistan                    1000.0\n",
+      "Tanzania                    140000.0\n",
+      "Thailand                     20000.0\n",
+      "Togo                         12000.0\n",
+      "Trinidad and Tobago           1200.0\n",
+      "Tunisia                          NaN\n",
+      "Turkey                           NaN\n",
+      "Uganda                       99000.0\n",
+      "Ukraine                          NaN\n",
+      "United Kingdom                   NaN\n",
+      "United States                48000.0\n",
+      "Uruguay                          NaN\n",
+      "Venezuela                        NaN\n",
+      "Vietnam                          NaN\n",
+      "Yemen                            NaN\n",
+      "Zambia                       92000.0\n",
+      "Zimbabwe                    140000.0\n",
+      "Name: 2001, Length: 143, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.loc[\"Brazil\",:])\n",
+    "print(data.loc[:,\"2001\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
