draft 1 complete (notebook content)

--- a/intro-to-python/intro-to-python-workbook.ipynb
+++ b/intro-to-python/intro-to-python-workbook.ipynb
@@ -713,6 +713,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Create an empty list and append items to it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "['this is a single string']\n",
+      "['this is a single string', ['this', 'is', 'a', 'few', 'strings']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "empty_list = []\n",
+    "print(empty_list)\n",
+    "empty_list.append(\"this is a single string\")\n",
+    "print(empty_list)\n",
+    "empty_list.append([\"this\", \"is\", \"a\", \"few\", \"strings\"])\n",
+    "print(empty_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### <font color = green> Break here for 10 minutes to complete the exercises in Part 3: Functions and Lists.</font>"
    ]
   },
@@ -2189,50 +2220,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Perform calculations over columns of a data frame."
+    "##### Use .iloc to subset the dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "               1990    1991    1992     1993     1994     1995     1996  \\\n",
-      "country                                                                   \n",
-      "Afghanistan     NaN     NaN     NaN      NaN      NaN      NaN      NaN   \n",
-      "Angola       7500.0  8500.0  9500.0  11000.0  12000.0  13000.0  15000.0   \n",
-      "Argentina    4900.0  5400.0  5800.0   6300.0   6700.0   6700.0   6700.0   \n",
-      "Armenia        60.0    60.0    60.0     60.0    120.0    120.0    300.0   \n",
-      "Australia       NaN     NaN     NaN      NaN      NaN      NaN      NaN   \n",
-      "\n",
-      "                1997     1998     1999   ...        2002     2003     2004  \\\n",
-      "country                                  ...                                 \n",
-      "Afghanistan      NaN      NaN      NaN   ...         NaN      NaN      NaN   \n",
-      "Angola       16000.0  17000.0  18000.0   ...     21000.0  22000.0  23000.0   \n",
-      "Argentina     6900.0   7000.0   7100.0   ...      7400.0   7500.0   7600.0   \n",
-      "Armenia        300.0    300.0    300.0   ...       120.0    120.0    120.0   \n",
-      "Australia        NaN      NaN      NaN   ...         NaN      NaN      NaN   \n",
-      "\n",
-      "                2005     2006     2007     2008     2009     2010     2011  \n",
-      "country                                                                     \n",
-      "Afghanistan      NaN      NaN      NaN      NaN      NaN      NaN   1100.0  \n",
-      "Angola       23000.0  24000.0  24000.0  24000.0  24000.0  24000.0  23000.0  \n",
-      "Argentina     7700.0   7700.0   7600.0   7500.0   7500.0      NaN   5600.0  \n",
-      "Armenia        120.0    120.0    120.0    300.0    300.0      NaN    350.0  \n",
-      "Australia        NaN      NaN      NaN      NaN      NaN      NaN   1100.0  \n",
-      "\n",
-      "[5 rows x 22 columns]\n"
+      "               1990     1991     1992     1993     1994\n",
+      "country                                                \n",
+      "Mozambique  25000.0  33000.0  43000.0  55000.0  67000.0\n",
+      "Myanmar     14000.0  13000.0  13000.0  16000.0  17000.0\n",
+      "Namibia      3800.0   5200.0   7200.0   9800.0  13000.0\n",
+      "Nepal         350.0    350.0    750.0   1000.0   1500.0\n"
      ]
     }
    ],
    "source": [
-    "subset = data.iloc[:5]\n",
-    "print(subset)\n",
-    "#print(subset.loc[:, \"2011\"] - subset.loc[:,\"1990\"])"
+    "subset = data.iloc[88:92,:5] #.iloc uses numerical indexes instead of row or column names like .loc does\n",
+    "print(subset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Perform calculations over columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1990:\n",
+      " country\n",
+      "Mozambique    25000.0\n",
+      "Myanmar       14000.0\n",
+      "Namibia        3800.0\n",
+      "Nepal           350.0\n",
+      "Name: 1990, dtype: float64 \n",
+      "1994: \n",
+      " country\n",
+      "Mozambique    67000.0\n",
+      "Myanmar       17000.0\n",
+      "Namibia       13000.0\n",
+      "Nepal          1500.0\n",
+      "Name: 1994, dtype: float64\n",
+      "diff: \n",
+      " country\n",
+      "Mozambique    42000.0\n",
+      "Myanmar        3000.0\n",
+      "Namibia        9200.0\n",
+      "Nepal          1150.0\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"1990:\\n\", subset.loc[:, \"1990\"],\"\\n1994: \\n\", subset.loc[:, \"1994\"])\n",
+    "print(\"diff: \\n\", subset.loc[:, \"1994\"] - subset.loc[:, \"1990\"])"
    ]
   },
   {
@@ -2246,28 +2302,139 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conditional Statements"
+    "# Conditional Statements\n",
+    "* An `if` statement (more properly called a conditional statement) controls whether a block of code is executed or not. \n",
+    "* The structure of an `if` statement is similar to that of a `for` loop:\n",
+    "    * The first line opens with `if` and ends with a colon `:`\n",
+    "    * The body containing one or more statements is indented (by 4 spaces or a tab)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42 is the answer to the meaning of life\n",
+      "10 is not the answer to the meaning of life\n"
+     ]
+    }
+   ],
    "source": [
-    "# Looping Over Datasets (Lists)"
+    "result = 42\n",
+    "if result == 42:\n",
+    "    print(result, \"is the answer to the meaning of life and the universe\")\n",
+    "\n",
+    "result = 10\n",
+    "if result < 42:\n",
+    "    print(result, \"is not the answer to the meaning of life\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Applying Conditional Statements to Datasets (Dataframes)"
+    "##### Conditionals are often used within `for` loops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43 is larger than average\n",
+      "50 is larger than average\n",
+      "42 is larger than average\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = [10, 20, 12, 43, 50, 42]\n",
+    "for result in results:\n",
+    "    if result > statistics.mean(results):\n",
+    "        print(result, \"is larger than average\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Use `else` within a to execute a block of code when an `if` condition is *not* true "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 is smaller than average\n",
+      "20 is smaller than average\n",
+      "12 is smaller than average\n",
+      "43 is larger than average\n",
+      "50 is larger than average\n",
+      "42 is larger than average\n"
+     ]
+    }
+   ],
+   "source": [
+    "for result in results: \n",
+    "    if result > statistics.mean(results):\n",
+    "        print(result, \"is larger than average\")\n",
+    "    else:\n",
+    "        print(result, \"is smaller than average\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Use `elif` to add additional tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 is too small\n",
+      "20 is too small\n",
+      "12 is too small\n",
+      "43 is too large\n",
+      "50 is too large\n",
+      "42 is the answer to the meaning of life and the universe\n"
+     ]
+    }
+   ],
+   "source": [
+    "for result in results: \n",
+    "    if result > 42:\n",
+    "        print(result, \"is too large\")\n",
+    "    elif result < 42:\n",
+    "        print(result, \"is too small\")\n",
+    "    else:\n",
+    "        print(result, \"is the answer to the meaning of life and the universe\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <font color = green> Break here for 10 minutes to complete the exercises in Part 6: For Loops.</font>"
    ]
   }
  ],
