--- a/intro-to-python/intro-to-python-exercises-answer-key.ipynb
+++ b/intro-to-python/intro-to-python-exercises-answer-key.ipynb
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -618,11 +618,113 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### 5. Create a data subset that contains the countries Papua New Guinea, Thailand, Indonesia, Malaysia, and Philippines for the years 2005 through 2010. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                     2005     2006     2007     2008     2009     2010\n",
+      "country                                                               \n",
+      "Papua New Guinea   2600.0   2500.0   2300.0   2100.0   2000.0   1800.0\n",
+      "Thailand          30000.0  24000.0  19000.0  15000.0  13000.0  11000.0\n",
+      "Indonesia         46000.0  43000.0  44000.0  46000.0  49000.0  52000.0\n",
+      "Malaysia           9600.0   9800.0  10000.0  10000.0  10000.0      NaN\n",
+      "Philippines        1200.0   1400.0   1700.0   2000.0   2500.0   3500.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "countries = [\"Papua New Guinea\", \"Thailand\", \"Indonesia\", \"Malaysia\", \"Philippines\"]\n",
+    "subset = data.loc[countries,\"2005\":\"2010\"]\n",
+    "print(subset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 6: For Loops"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. Fill in the blanks below, to write a program that checks how the cost of an in a list of costs relates to the specified price point."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This cost is under budget\n",
+      "This cost is under budget\n",
+      "This cost is over the price point\n",
+      "This cost is exactly at the price point\n",
+      "This cost is over the price point\n",
+      "This cost is under budget\n",
+      "This cost is over the price point\n"
+     ]
+    }
+   ],
+   "source": [
+    "costs = [700, 500, 2000, 1000, 1100, 500, 10000]\n",
+    "price_point = 1000\n",
+    "\n",
+    "for cost in costs:\n",
+    "    if cost < price_point:\n",
+    "        print(\"This cost is under budget\")\n",
+    "    elif cost == price_point:\n",
+    "        print(\"This cost is exactly at the price point\")\n",
+    "    else:\n",
+    "        print(\"This cost is over the price point\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Fill in the blanks below, so this program creates `new_list` that contains zeroes where the `original_list`'s values where negative, and ones where the original list's values were positive."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 0, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "original_list = [-1.5, 0.2, 0.4, -1.3, 0.4]\n",
+    "new_list = []\n",
+    "for value in original_list:\n",
+    "    if value < 0:\n",
+    "        new_list.append(0)\n",
+    "    else:\n",
+    "        new_list.append(1)\n",
+    "print(new_list)"
+   ]
   }
  ],
  "metadata": {
