--- a/intro-to-python/intro-to-python-exercises.ipynb
+++ b/intro-to-python/intro-to-python-exercises.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this workbook, you will see text prompts containing the exercise prommpts - you will write the code that will supply the answer within code blocks and run these blocks."
+    "In this workbook, you will see text prompts containing the exercise prompts - you will write the code that will supply the answer within code blocks and run these blocks."
    ]
   },
   {
@@ -104,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### In this section, you will be using the variables created in the code below. Run the block containing these variables to create them, but do not alter these."
+    "#### In this section, you will be using the variables created in the code below. Run the block containing these variables to create them, but do not alter the contents of this block."
    ]
   },
   {
@@ -131,9 +131,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -153,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 7. Convert and print `type_test` to an integer value."
+    "#### 7. Convert `type_test` to an integer value."
    ]
   },
   {
@@ -176,6 +174,339 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 3: Functions and Lists "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. Create and return (print) a list called `x`, storing the following numbers: 23, 34, 54, 65, 45, 23, 34, 55."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Python provides basic statistics functions including mean(), median(), and mode(). These functions are a part of the `statistics` package. Import the `statistics` package below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. Use the `help()` function to learn about the `mean()` function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function mean in module statistics:\n",
+      "\n",
+      "mean(data)\n",
+      "    Return the sample arithmetic mean of data.\n",
+      "    \n",
+      "    >>> mean([1, 2, 3, 4, 4])\n",
+      "    2.8\n",
+      "    \n",
+      "    >>> from fractions import Fraction as F\n",
+      "    >>> mean([F(3, 7), F(1, 21), F(5, 3), F(1, 3)])\n",
+      "    Fraction(13, 21)\n",
+      "    \n",
+      "    >>> from decimal import Decimal as D\n",
+      "    >>> mean([D(\"0.5\"), D(\"0.75\"), D(\"0.625\"), D(\"0.375\")])\n",
+      "    Decimal('0.5625')\n",
+      "    \n",
+      "    If ``data`` is empty, StatisticsError will be raised.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4. Use `mean()` to find the average of `x`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "41.625\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. Use `append()` to add the number 100 to x as a new list item, and print x. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[23, 34, 54, 65, 45, 23, 34, 55, 100, 100]\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6. Create a new list containing the numbers 200, 300, and 400. Use the `extend()` method to combine this new list with  `x`. Print the result."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[23, 34, 54, 65, 45, 23, 34, 55, 100, 100, 200, 300, 400]\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 4: For Loops"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. Use a for loop to return each of the numbers stored in x, preceeded by the string \"result: \". \n",
+    "#### The output should look like `result: returned_number_from_x`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. For each number in list `x`, print: \n",
+    "    * The result of each number plus 21. \n",
+    "    * Each number multiplied by itself.\n",
+    "    * The result the average of x minus each number. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 5: Pandas and Data Frames"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. Import the Pandas library as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " #### 2. Read in the gapminder dataset (the same one used in the class workbook) as a variable called `data`. Be sure to set the index column to `country`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. Print the reported HIV rate for Tanzania in 1997"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4. Print all reported years of HIV rates from Brazil, and all repored HIV rates from the year 2001 in seperate print statements. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. Create a data subset that contains the countries Papua New Guinea, Thailand, Indonesia, Malaysia, and Philippines for the years 2005 through 2010. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 6: For Loops"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. Fill in the blanks below, to write a program that checks how the cost of an in a list of costs relates to the specified price point."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This cost is under budget\n",
+      "This cost is under budget\n",
+      "This cost is over the price point\n",
+      "This cost is exactly at the price point\n",
+      "This cost is over the price point\n",
+      "This cost is under budget\n",
+      "This cost is over the price point\n"
+     ]
+    }
+   ],
+   "source": [
+    "costs = [700, 500, 2000, 1000, 1100, 500, 10000]\n",
+    "price_point = 1000\n",
+    "\n",
+    "for cost in costs:\n",
+    "    if :\n",
+    "        print(\"This cost is under budget\")\n",
+    "    elif :\n",
+    "        print(\"This cost is exactly at the price point\")\n",
+    "    else:\n",
+    "        print(\"This cost is over the price point\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Fill in the blanks below, so this program creates `new_list` that contains zeroes where the `original_list`'s values where negative, and ones where the original list's values were positive. Print the new list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 0, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "original_list = [-1.5, 0.2, 0.4, -1.3, 0.4]\n",
+    "new_list = []\n",
+    "for value in original_list:\n",
+    "    if :\n",
+    "        new_list.append()\n",
+    "    else:\n",
+    "        new_list.append()\n",
+    "print()"
+   ]
   }
  ],
  "metadata": {
